--- a/se491project/.classpath
+++ b/se491project/.classpath
@@ -5,8 +5,21 @@
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/jraitsev/libs/hamcrest-1.3/hamcrest-all-1.3-javadoc.jar"/>
-	<classpathentry kind="lib" path="/Users/jraitsev/libs/hamcrest-1.3/hamcrest-all-1.3-sources.jar"/>
-	<classpathentry kind="lib" path="/Users/jraitsev/libs/hamcrest-1.3/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="/media/DATA/lib/hamcrest-1.3/hamcrest-all-1.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="/media/DATA/lib/hamcrest-1.3/hamcrest-all-1.3-sources.jar"/>
+	<classpathentry kind="lib" path="/media/DATA/lib/hamcrest-1.3/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/v2"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.aop-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.asm-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.beans-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.context-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.core-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.expression-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.jdbc-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.transaction-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.web-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.web.servlet-3.1.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/opentok.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gson-2.2.2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
