The merge caused error in directory structure. I corrected these error and removed my temporary VCUSER class and will connect the login to Andy's entities and DAO tomorrow.

--- a/se491project/war/WEB-INF/web.xml
+++ b/se491project/war/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>se491_vcproj</servlet-name>
-		<servlet-class>edu.depaul.se491.api.se491proj.Se491_vcProjServlet</servlet-class>
+		<servlet-class>edu.depaul.se491.servlets.Se491_vcProjServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>se491_vcproj</servlet-name>
