--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,10 @@
 	<artifactId>xdoclet</artifactId>
 	<version>1.2</version>
 </dependency>            
+<dependency>
+	<groupId>javax.validation</groupId>
+	<artifactId>validation-api</artifactId>
+	<version>1.0.0.GA</version>
+</dependency>
  </dependencies>
 </project>
