--- a/se491project/pom.xml
+++ b/se491project/pom.xml
@@ -35,6 +35,12 @@
     </plugins>
   </build>
  <dependencies>
+     
+     <dependency>
+		<groupId>org.apache.tomcat</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>6.0.35</version>
+	</dependency>
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
@@ -61,10 +67,127 @@
 		<version>2.2.2</version>
 	</dependency>
 	<dependency>
-	<groupId>org.hamcrest</groupId>
-	<artifactId>hamcrest-core</artifactId>
-	<version>1.3</version>
-</dependency>
+		<groupId>org.hamcrest</groupId>
+		<artifactId>hamcrest-core</artifactId>
+		<version>1.3</version>
+	</dependency>
+     <dependency>
+		<groupId>commons-logging</groupId>
+		<artifactId>commons-logging</artifactId>
+		<version>1.1.1</version>
+	</dependency>
+		<dependency>
+		<groupId>javax.validation</groupId>
+		<artifactId>validation-api</artifactId>
+		<version>1.0.0.GA</version>
+	</dependency>
+    <dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-beans</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-expression</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-web</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+	    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-jdbc</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-asm</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-aop</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-tx</artifactId>
+		<version>3.1.2.RELEASE</version>
+	</dependency>
+    <dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-validator</artifactId>
+		<version>4.1.0.Final</version>
+	</dependency>
+    <dependency>
+		<groupId>javax.transaction</groupId>
+		<artifactId>jta</artifactId>
+		<version>1.1</version>
+	</dependency>
+    <dependency>
+		<groupId>net.sf.jsr107cache</groupId>
+		<artifactId>jsr107cache</artifactId>
+		<version>1.1</version>
+	</dependency>
+	<dependency>
+		<groupId>javax.jdo</groupId>
+		<artifactId>jdo-api</artifactId>
+		<version>3.0.1</version>
+	</dependency>
+    <dependency>
+		<groupId>org.apache.geronimo.specs</groupId>
+		<artifactId>geronimo-jpa_2.0_spec</artifactId>
+		<version>1.0</version>
+	</dependency>
+    <dependency>
+		<groupId>org.datanucleus</groupId>
+		<artifactId>datanucleus-core</artifactId>
+		<version>3.1.0-m5</version>
+	</dependency>
+    <dependency>
+		<groupId>com.google.appengine.orm</groupId>
+		<artifactId>datanucleus-appengine</artifactId>
+		<version>2.1.0-final</version>
+	</dependency>
+    <dependency>
+		<groupId>org.datanucleus</groupId>
+		<artifactId>datanucleus-api-jdo</artifactId>
+		<version>3.1.0-m3</version>
+	</dependency>
+    <dependency>
+		<groupId>org.datanucleus</groupId>
+		<artifactId>datanucleus-api-jpa</artifactId>
+		<version>3.1.0-m3</version>
+	</dependency>
+    <dependency>
+		<groupId>com.opentok.api</groupId>
+		<artifactId>opentok-java-sdk</artifactId>
+		<version>0.91.57</version>
+	</dependency>
+                    
+                    
             
  </dependencies>
 </project>
