--- a/se491project/pom.xml
+++ b/se491project/pom.xml
@@ -2,8 +2,8 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.example</groupId>
-  <artifactId>example</artifactId>
+  <groupId>edu.depaul.se491</groupId>
+  <artifactId>VirtualClassroom</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <repositories>
@@ -13,7 +13,7 @@
     </repository>
   </repositories>
   <build>
-    <finalName>example</finalName>
+    <finalName>Virtual Classrom</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
@@ -35,7 +35,6 @@
     </plugins>
   </build>
  <dependencies>
-     
      <dependency>
 		<groupId>org.apache.tomcat</groupId>
 		<artifactId>servlet-api</artifactId>
@@ -67,8 +66,18 @@
 		<version>2.2.2</version>
 	</dependency>
 	<dependency>
+		<groupId>org.testng</groupId>
+		<artifactId>testng</artifactId>
+		<version>6.8</version>
+	</dependency>
+	<dependency>
 		<groupId>org.hamcrest</groupId>
 		<artifactId>hamcrest-core</artifactId>
+		<version>1.3</version>
+	</dependency>
+	<dependency>
+		<groupId>org.hamcrest</groupId>
+		<artifactId>hamcrest-library</artifactId>
 		<version>1.3</version>
 	</dependency>
      <dependency>
