--- a/se491project/pom.xml
+++ b/se491project/pom.xml
@@ -195,8 +195,40 @@
 		<artifactId>opentok-java-sdk</artifactId>
 		<version>0.91.57</version>
 	</dependency>
-                    
-                    
-            
+    <dependency>
+		<groupId>org.apache.tiles</groupId>
+		<artifactId>tiles-jsp</artifactId>
+		<version>2.2.2</version>
+	</dependency>
+    <dependency>
+		<groupId>org.apache.tiles</groupId>
+		<artifactId>tiles-el</artifactId>
+		<version>2.2.2</version>
+	</dependency>                            
+    <dependency>
+		<groupId>org.apache.tiles</groupId>
+		<artifactId>tiles-core</artifactId>
+		<version>2.2.2</version>
+	</dependency>                        
+    <dependency>
+		<groupId>org.apache.tiles</groupId>
+		<artifactId>tiles-api</artifactId>
+		<version>2.2.2</version>
+	</dependency> 
+    <dependency>
+		<groupId>org.apache.tiles</groupId>
+		<artifactId>tiles-servlet</artifactId>
+		<version>2.2.2</version>
+	</dependency> 
+    <dependency>
+		<groupId>org.apache.tiles</groupId>
+		<artifactId>tiles-servlet</artifactId>
+		<version>2.2.2</version>
+	</dependency> 
+    <dependency>
+		<groupId>org.apache.tiles</groupId>
+		<artifactId>tiles-template</artifactId>
+		<version>2.2.2</version>
+	</dependency> 			            
  </dependencies>
 </project>
