--- a/se491project/pom.xml
+++ b/se491project/pom.xml
@@ -58,7 +58,7 @@
 	<dependency>
 		<groupId>com.google.appengine</groupId>
 		<artifactId>appengine-api-1.0-sdk</artifactId>
-		<version>1.7.2.1</version>
+		<version>1.7.3</version>
 	</dependency>
 	<dependency>
 		<groupId>com.google.code.gson</groupId>
@@ -229,6 +229,40 @@
 		<groupId>org.apache.tiles</groupId>
 		<artifactId>tiles-template</artifactId>
 		<version>2.2.2</version>
-	</dependency> 			            
+	</dependency> 	
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.5.8</version>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-log4j12</artifactId>
+		<version>1.4.2</version>
+	</dependency>
+    <dependency>
+		<groupId>commons-beanutils</groupId>
+		<artifactId>commons-beanutils</artifactId>
+		<version>1.8.0</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-digester</groupId>
+		<artifactId>commons-digester</artifactId>
+		<version>2.0</version>
+	</dependency>
+	<dependency>
+		<groupId>jstl</groupId>
+		<artifactId>jstl</artifactId>
+		<version>1.2</version>
+	</dependency>
+	<dependency>
+		<groupId>asm</groupId>
+		<artifactId>asm</artifactId>
+		<version>3.3.1</version>
+	</dependency>
+            
+                        
+            
+            		            
  </dependencies>
 </project>
