--- a/se491project/war/WEB-INF/web.xml
+++ b/se491project/war/WEB-INF/web.xml
@@ -67,4 +67,12 @@
         <servlet-name>spring</servlet-name>
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
+    <error-page>
+    	<exception-type>java.lang.Throwable</exception-type>
+   		<location>/displayErrorJavaExceptionPage.do</location>
+  	</error-page>
+  	<error-page>
+    	<error-code>404</error-code>
+ 		<location>/displayError404Page.do</location>
+	</error-page>
 </web-app>
