--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,14 @@
 .metadata
 
 #TEST
-se491project/test-output/
+se491project/test-output/*
 
 #SERVERS
-Servers
+Servers/*
 
 #GAE
 appengine-web.xml
+
+#OTHER
+se491project/war/WEB-INF/appengine-generated/*
+*~
