Changed Package names to reflect maven strutcure and corrosponding imports

--- a/se491project/war/WEB-INF/web.xml
+++ b/se491project/war/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>se491_vcproj</servlet-name>
-		<servlet-class>edu.depaul.se491.servlets.Se491_vcProjServlet</servlet-class>
+		<servlet-class>main.java.edu.depaul.se491.servlets.Se491_vcProjServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>se491_vcproj</servlet-name>
@@ -12,7 +12,7 @@
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>login_required</servlet-name>
-		<servlet-class>edu.depaul.se491.servlets.login.LoginServlet</servlet-class>
+		<servlet-class>main.java.edu.depaul.se491.servlets.login.LoginServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>login_required</servlet-name>
@@ -20,7 +20,7 @@
 	</servlet-mapping>
 		<servlet>
 		<servlet-name>show_login</servlet-name>
-		<servlet-class>edu.depaul.se491.servlets.login.ShowLoginPage</servlet-class>
+		<servlet-class>main.java.edu.depaul.se491.servlets.login.ShowLoginPage</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>show_login</servlet-name>
@@ -28,7 +28,7 @@
 	</servlet-mapping>
 	<servlet>
 		<servlet-name>login_redirect</servlet-name>
-		<servlet-class> edu.depaul.se491.servlets.login.LoginRedirectServlet</servlet-class>
+		<servlet-class> main.java.edu.depaul.se491.servlets.login.LoginRedirectServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>login_redirect</servlet-name>
@@ -37,7 +37,7 @@
 	
 	<servlet>
 		<servlet-name>OpenTok</servlet-name>
-		<servlet-class>edu.depaul.se491.servlets.opentok.OpenTokServlet</servlet-class>
+		<servlet-class>main.java.edu.depaul.se491.servlets.opentok.OpenTokServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>OpenTok</servlet-name>
