added target to gitignore, corrected spelling typo in pom

--- a/se491project/pom.xml
+++ b/se491project/pom.xml
@@ -14,7 +14,7 @@
         </repository>
     </repositories>
     <build>
-        <finalName>Virtual_Classrom</finalName>
+        <finalName>Virtual_Classroom</finalName>
         <plugins>
             <plugin>
                 <groupId>com.google.appengine</groupId>
