--- a/se491project/pom.xml
+++ b/se491project/pom.xml
@@ -10,6 +10,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java-version>1.6</java-version>
+				<maven.test.skip.exec>true</maven.test.skip.exec>
     </properties>
     <build>
         <finalName>Virtual_Classroom</finalName>
@@ -37,12 +38,11 @@
                 </configuration>
             </plugin>
             <plugin>
+								<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+								<version>2.1.3</version>
                 <configuration>
                     <testFailureIgnore>false</testFailureIgnore>
-                    <includes>
-                        <include>**/*Test*.java</include>
-                    </includes>
                 </configuration>
             </plugin>
             <plugin>
