--- a/se491project/pom.xml
+++ b/se491project/pom.xml
@@ -8,15 +8,15 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <repositories>
-    <repository>
-      <id>google-api-services</id>
-      <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
-    </repository>
-  </repositories>
+        <repository>
+            <id>google-api-services</id>
+            <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
+        </repository>
+    </repositories>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java-version>1.6</java-version>
-				<maven.test.skip.exec>true</maven.test.skip.exec>
+        <maven.test.skip.exec>false</maven.test.skip.exec>
     </properties>
     <build>
         <finalName>Virtual_Classroom</finalName>
@@ -44,9 +44,9 @@
                 </configuration>
             </plugin>
             <plugin>
-								<groupId>org.apache.maven.plugins</groupId>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-								<version>2.1.3</version>
+                <version>2.1.3</version>
                 <configuration>
                     <testFailureIgnore>false</testFailureIgnore>
                 </configuration>
@@ -100,10 +100,10 @@
             <version>1.2</version>
         </dependency>
         <dependency>
-      <groupId>com.google.apis</groupId>
-      <artifactId>google-api-services-drive</artifactId>
-      <version>v2-rev47-1.13.2-beta</version>
-    </dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-drive</artifactId>
+            <version>v2-rev47-1.13.2-beta</version>
+        </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
