--- a/se491project/pom.xml
+++ b/se491project/pom.xml
@@ -12,6 +12,11 @@
             <id>google-api-services</id>
             <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
         </repository>
+        <repository>
+       		<id>google-releases</id>
+        	<name>Google Releases</name>
+        <url>https://oss.sonatype.org/content/repositories/google-releases</url>
+      </repository>
     </repositories>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -115,6 +120,11 @@
             <version>1.7.3</version>
         </dependency>
         <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-oauth2</artifactId>
+      <version>v2-rev29-1.13.2-beta</version>
+    </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.2.2</version>
@@ -144,6 +154,11 @@
             <artifactId>validation-api</artifactId>
             <version>1.0.0.GA</version>
         </dependency>
+        <dependency>
+	<groupId>joda-time</groupId>
+	<artifactId>joda-time</artifactId>
+	<version>2.1</version>
+</dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -234,6 +249,16 @@
             <artifactId>datanucleus-appengine</artifactId>
             <version>2.1.0-final</version>
         </dependency>
+        <dependency>
+        <groupId>com.google.api.client</groupId>
+        <artifactId>google-api-client</artifactId>
+        <version>1.3.1-alpha</version>
+      </dependency>
+      <dependency>
+  		<groupId>com.google.api-client</groupId>
+  		<artifactId>google-api-client</artifactId>
+  		<version>1.11.0-beta</version>
+		</dependency>
         <dependency>
             <groupId>org.datanucleus</groupId>
             <artifactId>datanucleus-api-jdo</artifactId>
