--- a/se491project/war/WEB-INF/web.xml
+++ b/se491project/war/WEB-INF/web.xml
@@ -52,6 +52,15 @@
     	<servlet-name>InitChatServlet</servlet-name>
     	<url-pattern>/initChat</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+    	<servlet-name>ChatManager</servlet-name>
+    	<servlet-class>edu.depaul.se491.servlets.chat.ChatManager</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    	<servlet-name>ChatManager</servlet-name>
+    	<url-pattern>/chatManager</url-pattern>
+    </servlet-mapping>
 
     <servlet>
         <servlet-name>SystemServiceServlet</servlet-name>
