--- a/se491project/war/WEB-INF/web.xml
+++ b/se491project/war/WEB-INF/web.xml
@@ -54,12 +54,12 @@
     </servlet-mapping>
     
     <servlet>
-    	<servlet-name>ChatManager</servlet-name>
-    	<servlet-class>edu.depaul.se491.servlets.chat.ChatManager</servlet-class>
+    	<servlet-name>ChatServlet</servlet-name>
+    	<servlet-class>edu.depaul.se491.servlets.chat.ChatServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-    	<servlet-name>ChatManager</servlet-name>
-    	<url-pattern>/chatManager</url-pattern>
+    	<servlet-name>ChatServlet</servlet-name>
+    	<url-pattern>/chat</url-pattern>
     </servlet-mapping>
 
     <servlet>
